--- a/app/views/lessons/_form.html.erb
+++ b/app/views/lessons/_form.html.erb
@@ -1,11 +1,7 @@
+<%= render "layouts/form", :object => @lesson %>
+
 <%= form_for(@lesson) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
   <%= f.label :content %>
   <%= f.text_field :content %>
-  <%= f.label :section_id %>
-  <%= f.number_field :section_id %>
-  <%= f.label :lesson_id %>
-  <%= f.number_field :lesson_id %>
   <%= f.submit %>
 <% end %>
